nfc: add templates for data exchange

--- a/templates/gaiax/data-usage.mustache
+++ b/templates/gaiax/data-usage.mustache
@@ -12,16 +12,6 @@
   "issuanceDate": "{{{ issuance_date }}}",
   "credentialSubject": {
     "id": "{{{ subject_id }}}",
-    "type": "gx:DataResource",
-    "gx:name": "Data resource test",
-    "gx:description": "Testing data",
-    "gx:containsPII": false,
-    "gx:policy": "default: allow",
-    "gx:license": "EPL-2.0",
-    "gx:copyrightOwnedBy": "original owner",
-    "gx:producedBy": {
-      "id": "{{{ participant_cs_id }}}"
-    },
-    "gx:exposedThrough": ["{{{ data_resource_url }}}"]
+    "type": "gx:DataUsage"
   }
 }
