fix: make data resource exposedThrough attribute an object

--- a/templates/gaiax/data-resource.mustache
+++ b/templates/gaiax/data-resource.mustache
@@ -22,6 +22,6 @@
     "gx:producedBy": {
       "id": "{{{ participant_cs_id }}}"
     },
-    "gx:exposedThrough": ["{{{ data_resource_url }}}"]
+    "gx:exposedThrough": [{"id": "{{{ data_resource_url }}}"}]
   }
 }
