feat: add SoftwareResource and InstantiatedVirtualResource credentials

--- a/templates/gaiax/dataset-description.mustache
+++ b/templates/gaiax/dataset-description.mustache
@@ -34,6 +34,6 @@
     {{#dataset_license_url}}"dct:license": ["{{{ dataset_license_url }}}"],{{/dataset_license_url}}
     "gx:dataLicensors": [],
     "gx:dataUsageAgreement": [],
-    "gx:exposedThrough": ["{{{ data_resource_url }}}"]
+    "gx:exposedThrough": [{"id": "{{{ instantiated_virtual_resource_cs_id }}}"}]
   }
 }
