fix: turn service access point into a standalone

--- a/templates/gaiax/instantiated-virtual-resource.mustache
+++ b/templates/gaiax/instantiated-virtual-resource.mustache
@@ -23,13 +23,6 @@
     "gx:tenantOwnedBy": [{
         "id": "{{{ participant_cs_id }}}"
     }],
-    "gx:serviceAccessPoint": [
-        {
-            "gx:name": "{{{ endpoint_route }}}",
-            "gx:host": "{{{ domain_name }}}",
-            "gx:protocol": "HTTP",
-            "gx:port": [443]
-        }
-    ]
+    "gx:serviceAccessPoint": [{"id": "{{{ service_access_point_cs_id }}}"}]
   }
 }
