--- a/templates/gaiax/service-access-point.mustache
+++ b/templates/gaiax/service-access-point.mustache
@@ -4,18 +4,16 @@
     "https://w3id.org/security/suites/jws-2020/v1",
     "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#"
   ],
-  "type": [
-    "VerifiableCredential"
-  ],
+  "type": "VerifiableCredential",
   "id": "{{{ credential_id }}}",
   "issuer": "{{{ issuer }}}",
   "issuanceDate": "{{{ issuance_date }}}",
   "credentialSubject": {
     "id": "{{{ subject_id }}}",
-    "type": "gx:SoftwareResource",
-    "gx:name": "Carecentive server",
-    "gx:copyrightOwnedBy": [{"id": "{{{ participant_cs_id }}}"}],
-    "gx:license": ["{{{ license_url }}}"],
-    "gx:policy": ["{{{ policy_contents }}}"]
+    "type": "gx:ServiceAccessPoint",
+    "gx:name": "{{{ endpoint_route }}}",
+    "gx:host": "{{{ domain_name }}}",
+    "gx:protocol": "HTTP",
+    "gx:port": [443]
   }
 }
