fix: make service access point string

--- a/templates/gaiax/service-access-point.mustache
+++ b/templates/gaiax/service-access-point.mustache
@@ -14,6 +14,6 @@
     "gx:name": "{{{ endpoint_route }}}",
     "gx:host": "{{{ domain_name }}}",
     "gx:protocol": "HTTP",
-    "gx:port": [443]
+    "gx:port": ["443"]
   }
 }
